--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,9 @@
   border-radius: 10px;
   box-shadow: 0 1px 1px 1px rgba(0,0,0,.5);
   font-size: 1.2em;
+  cursor: pointer;
+  margin-bottom: 1%;
+
 }
 .but{
   padding: 2%;
